# conan-cmake-test

./: .gitignore  .travis.yml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: catalyst.yml  ios.yml
cmake/: CMakeLists.txt
code/src/: lib.cpp
conan/profiles/: cmake_test_catalyst_framework_profile
conan/recipe/: conanfile.py
src/: main.cpp
support/Modules/: module.modulemap  umbrella-header.h
